Mon Apr 23 14:16:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests/RTCORBA/Banded_Connections/server.cpp:
          Get rid of assert and throw/return an error report!

Mon Apr 23 12:03:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/ami_handler_reply_stub_operation_ch.cpp:
          Improved layout of generated code

Mon Apr 23 11:16:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Big_Oneways/run_test.pl:
        * tests/Big_Twoways/run_test.pl:
        * tests/Bug_2349_Regression/run_test.pl:
        * tests/Bug_2494_Regression/run_test.pl:
        * tests/Bug_2683_Regression/run_test.pl:
        * tests/MT_Server/run_test.pl:
        * tests/Native_Exceptions/run_test.pl:
        * tests/Nested_Event_Loop/run_test.pl:
        * tests/NestedUpcall/Simple/run_test.pl:
        * tests/Parallel_Connect_Strategy/run_test.pl:
        * tests/POA/Persistent_ID/run_test.pl:
          Improved for vxworks testing

Fri Apr 20 14:27:45 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_2768_Regression/Bug_2768_Regression.mpc:

          Added the 'corba_messaging' base project since this test uses CORBA
          messaging features.

Fri Apr 20 13:42:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
        * tao/CORBANAME_Parser.cpp:
        * tao/PI/ORBInitializer_Registry_Impl.cpp:
          Layout changes

        * tao/TAO_Internal.cpp:
          Use prefix increment

        * tao/Transport_Connector.cpp:
          Made debug statements consistent

Fri Apr 20 13:37:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CollocationLockup/run_test.pl:
          Fixed error in this script

Fri Apr 20 11:43:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1330_Regression/run_test.pl:
          Corrected this script

Fri Apr 20 11:38:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
